# codex-rule-system

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.codex-plugin/: plugin.json
scripts/: build-rule-picker.ps1  build-rule-system.ps1  project_rules.py  session_rules.py
skills/project-rule-add/: SKILL.md
skills/project-rule-add/agents/: openai.yaml
skills/project-rule-delete/: SKILL.md
skills/project-rule-delete/agents/: openai.yaml
skills/project-rule-list/: SKILL.md
skills/project-rule-list/agents/: openai.yaml
skills/project-rule-pick/: SKILL.md
skills/project-rule-pick/agents/: openai.yaml
skills/project-rule-update/: SKILL.md
skills/project-rule-update/agents/: openai.yaml
skills/rule-add/: SKILL.md
skills/rule-add/agents/: openai.yaml
skills/rule-capture/: SKILL.md
skills/rule-capture/agents/: openai.yaml
skills/rule-capture/scripts/: rule_capture.py
skills/rule-check/: SKILL.md
skills/rule-delete/: SKILL.md
skills/rule-delete/agents/: openai.yaml
skills/rule-display/: SKILL.md
skills/rule-display/agents/: openai.yaml
skills/rule-list/: SKILL.md
skills/rule-module/: SKILL.md
skills/rule-project/: SKILL.md
skills/rule-project-add/: SKILL.md
skills/rule-project-delete/: SKILL.md
skills/rule-project-list/: SKILL.md
skills/rule-project-pick/: SKILL.md
skills/rule-project-update/: SKILL.md
skills/rule-scan/: SKILL.md
skills/rule-system/: SKILL.md
skills/rule-update/: SKILL.md
tools/rule-picker-win/: Cargo.toml  README.md
tools/rule-system/: Cargo.toml  README.md
tools/rule-system/src/: main.rs
(+10 files in other folders)
